# pc1-pareja08

./: Actividad1.md  CMakeLists.txt  README.md
bench/: benchmark.cpp
reports/: coverage_report.md  optimization_report.md  profiling_report.md
src/: main.cpp  solution.cpp  solution.hpp
tests/: tests.cpp
